--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,13 @@ gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+mysql-connector==2.2.9
 mysqlclient==2.2.4
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
-psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
 SQLAlchemy==2.0.32
