--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ mysqlclient==2.2.4
 numpy==2.0.0
 packaging==24.1
 pandas==2.2.2
+psycopg2-binary==2.9.9
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
